# kryptokot

./: kryptokot.cabal  stack.yaml
app/: Main.hs  Set1Challenge4.hs
src/: Base64.hs  Common.hs  Hex.hs  Lib.hs  Xor.hs
test/: Base64Spec.hs  HexSpec.hs  LibSpec.hs  Spec.hs  XorSpec.hs
