name:                kryptokot
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ostapneko/kryptokot
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-files:          set1challenge4.txt
data-dir:            data

library
  hs-source-dirs:      src
  exposed-modules:     Hex
                     , Lib
                     , Base64
                     , Xor
                     , Common
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , bytestring
  default-language:    Haskell2010

executable kryptokot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kryptokot
                     , bytestring
  default-language:    Haskell2010

test-suite kryptokot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kryptokot
                     , hspec
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ostapneko/kryptokot
